# forward

./: .gitignore  README.md  pyproject.toml
forward/: __init__.py  __main__.py  config_example.py  main.py  notif.py  notifications.py
