[tool.poetry]
name = "forward"
version = "1.2.0"
description = ""
authors = ["Alexander Mulligan <amulligan@lear.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
winrt = "^1.0.21033.1"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
